<resources>
    <string name="app_name">LifeGame</string>
    <string name="action_settings">Settings</string>
    <string name="action_games">Games</string>
    <string name="action_refresh">Refresh</string>
    <string name="your_things_title">Your things</string>
    <string name="room_tings_title">Things in situation</string>
    <string name="action_exitgame">Exit game</string>
    <string name="quit_game_question">Do you want to quit the current game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="leaving_game">Quitting game</string>
    <string name="action_cheats">Cheat</string>
    <string name="action_points">Show score</string>
    <string name="points">Game score</string>
    <string name="action_share">Links and Share</string>
    <string name="admin_page_web">Admin page (web)</string>
    <string name="go_to_web">Go to web version</string>
    <string name="email_web_link">Email link to game</string>
    <string name="copy_link">Copy link to game</string>
    <string name="status">Status</string>
    <string name="show_log_devel">Show Log (devel)</string>
    <string name="clean">Clean</string>
    <string name="title_activity_world_choice">WorldChoiceActivity</string>
    <string name="world_list_title">Games</string>
    <string name="world_act_name">Worlds</string>
    <string name="update_game">Updating list of games and current situation.</string>
    <string name="continue_prev_situation">Continuing previous instance of</string>
    <string name="playing_from_scratch_1">Playing</string>
    <string name="playing_from_scratch_2">from scratch.</string>
    <string name="no_stored_game">No stored game for</string>
    <string name="starting_a_new_game">Starting a new game.</string>
    <string name="no_game_selected">No game selected</string>
    <string name="refresh_and_choose_game">Refresh and choose a game using the menu.</string>
    <string name="congratulations">Congratulations!</string>
    <string name="managed_to_win">You managed to finish the game.</string>
</resources>
